# phlow

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  Makefile  README.md  coverage.xml  index.html  mkdocs.yml  new-idea.md  package-lock.json  package.json  phlowtop.md  phlowtop_README.md  pyproject.toml  rbac-implementation-plan.md  sitemap.xml  tsconfig.json  turbo.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release-changesets.yml  release-simple.yml  release.yml  test.yml
api-reference/: index.html
circuit-breakers/: index.html
configuration/: index.html
docs/: a2a-compatibility.md  agent-cards.md  api-reference.md  audit.md  circuit-breakers.md  configuration.md  database-schema-phlowtop.sql  database-schema.sql  examples.md  getting-started.md  index.md  installation.md  key-management.md  monitoring.md  production-deployment.md  quickstart.md  rate-limiting.md  rbac.md  troubleshooting.md
docs/api/: javascript.md
docs/concepts/: a2a-integration.md  how-it-works.md
docs/dev-guide/: architecture.md  codebase-structure.md  database-schema.md  index.md  javascript-implementation.md  local-development.md  python-implementation.md  testing-strategy.md  troubleshooting.md
docs/examples/: basic-agent.md  multi-agent.md
docs/examples/multi-agent/: README.md  main.py  requirements.txt
docs/examples/simple/: .gitignore  README.md  main.py  requirements.txt
docs/guides/: agent-calls.md  authentication.md
docs/stylesheets/: extra.css
examples/: index.html
examples/a2a-compatible-agent/: .env.example  README.md  index.js  package.json
examples/agent-card-showcase/: README.md  client-agent.js  client-agent.py  data-analysis-agent.js  data-analysis-agent.py
examples/basic-agent/: .env.example  README.md  index.js  package.json  test-unit.js  test.js
examples/minimal-a2a-supabase/: README.md  index.js
examples/multi-agent/: README.md  index.html  main.py  main_true_a2a.py
examples/multi-agent-network/: .env.example  README.md  coordinator.js  package.json  test-network.js
examples/multi-agent-network/agents/: auth-agent.js  compute-agent.js  data-agent.js
examples/python-client/: .env.example  Dockerfile  README.md  client_helper.py  docker-compose.simple.yml  docker-compose.yml  main.py  requirements.txt  run_e2e_tests.sh  test_client.py  test_e2e.py  test_testcontainers.py
examples/python-client/supabase/: init.sql
examples/rbac_agent/: README.md  index.html  main.py  requirements.txt
examples/simple/: index.html  main.py  requirements.txt
installation/: index.html
key-management/: index.html
migrations/: 001_add_phlowtop_schema.sql  README.md
monitoring/: index.html
production-deployment/: index.html
quickstart/: index.html
rate-limiting/: index.html
rbac/: index.html
scripts/: test-e2e.sh  validate-examples-ci.py  validate-examples.sh
search/: search_index.json
src/phlow/: __init__.py  audit.py  auth.py  circuit_breaker.py  cli.py  exceptions.py  middleware.py  rate_limiter.py  supabase_helpers.py  types.py
src/phlow/integrations/: fastapi.py
src/phlow/monitoring/: logger.py
src/phlow/phlowtop/: __init__.py  __main__.py  app.py  config.py  supabase_client.py
src/phlow/phlowtop/views/: __init__.py  agents.py  messages.py  tasks.py
src/phlow/phlowtop/widgets/: __init__.py  header.py
src/phlow/rbac/: __init__.py  cache.py  store.py  types.py  verifier.py
tests/: test_audit.py  test_auth.py  test_circuit_breaker.py  test_cli.py  test_e2e.py  test_e2e_multi_agent.py  test_fastapi_integration.py  test_key_management.py  test_middleware.py  test_middleware_lifecycle.py  test_monitoring.py  test_phlowtop_agents_logic.py  test_phlowtop_agents_view.py  test_phlowtop_config.py  test_phlowtop_messages_logic.py  test_phlowtop_realtime.py  test_phlowtop_schema.py  test_phlowtop_structure.py  test_phlowtop_supabase.py  test_phlowtop_tasks_logic.py  test_rate_limiter.py  test_rbac.py  test_rbac_fastapi.py  test_rbac_integration.py  test_rbac_middleware.py  test_role_cache.py  test_supabase_helpers.py  test_token_ops.py
tests/integration/: jest.config.js  package.json
tests/integration/src/: auth.test.ts  dev-server.test.ts  e2e.test.ts  scenarios.test.ts  setup.ts
troubleshooting/: index.html
