[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phlow"
version = "0.1.0"
description = "Simple Python library for Phlow authentication"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Prassanna Ravishankar" },
]
keywords = ["phlow", "authentication", "agent", "a2a", "supabase", "middleware", "jwt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "supabase>=2.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "pyjwt>=2.8.0",
    "a2a-sdk>=0.2.11",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100.0"]
flask = ["flask>=2.3.0"]
django = ["django>=4.2.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.0.0",
    "twine>=4.0.0",
]

[project.urls]
Documentation = "https://prassanna.io/phlow/"
Issues = "https://github.com/prassanna-ravishankar/phlow/issues"
Source = "https://github.com/prassanna-ravishankar/phlow"

[tool.hatch.build.targets.wheel]
# TODO update package path after moving code
packages = ["phlow"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "README.md"]